2.1.0
-----
1. Merge some options; e.g. show ratings, show tech info, etc.

2.0.1
-----
 1. Update translations.
 2. Fix search field in various lists (e.g. Qobuz, Spotty).
 3. Fix some icons in Spotty.
 4. Fix subtoolbar left-padding when window width 370px or less.
 5. Give hover-buttons a background in lists, otherwise text can show through.
 6. Darken background of 'Adwaita-Dark' theme so as to work-around Chrome
    changing certain colours if its force dark mode is enabled.
 7. Fix margins of back button when home button is visible.
 8. Check if window.localStorage is undefined, if so cannot use.
 9. Fix drag'n'drop of playlist track onto queue.
10. Highlight drop target.
11. Fix drag image when start drag on list image.
12. Fix list hover buttons for light themes.
13. Fix 'All songs' missing from artist actions.
14. Only show 'All songs' if artist has more than 1 album.

2.0.0
-----
 1. Use custom vuetify build to trim out unused components.
 2. Add button to toggle queue visibility on desktop layout.
 3. Make cover-art in browse and queue views optional.
 4. Support 'Extras' section by using iframe.
 5. Place home button, if shown, to the right of the back button (matches
    browsers, etc.)
 6. If configured to show home button, then also show in titlebar of advanced
    search and extras pages.
 7. Show SugarCube pages in 'Extras' if it is installed.
 8. Swap (+) and (>) buttons to match LMS's default order.
 9. Replace GIF images in Classic Skin with SVGs.
10. Optionally display technical info when listing tracks in browse view.
11. Update version of vue-virtual-scroller, with hacky fix for issue 416.
12. Clicking duration in play queue will briefly show remaining track count and
    duration.
13. Combine library and material JS files into 1 for releases.
14. Defer loading of some JS and CSS until page loaded.
15. Split out functions from browse and now-playing pages that can be deferred.
16. Only download translation if lang or Material version changed.